fix(content-uploader): Fix 100% indicator being cropped (#1999)

--- a/src/elements/content-uploader/ItemProgress.scss
+++ b/src/elements/content-uploader/ItemProgress.scss
@@ -4,5 +4,5 @@
 }
 
 .bcu-progress-label {
-    min-width: 31px; // 100% takes up 31px
+    min-width: 35px; // 100% takes up 34.27px
 }
